<resources>
    <string name="app_name">Tim\'s Tool Rental</string>
    <string name="rentalDays">Enter up to seven days for rental.</string>
    <string name="radWasher">Power Washer Rental</string>
    <string name="radTiller">Power Tiller Rental</string>
    <string name="Title">Tim\'s Tool Rental</string>
    <string name="btnUpdate">Update</string>
    <string name="totalHeading">YOUR TOTAL IS:</string>
    <string name="total">""</string>
</resources>
